--- a/blas/Makefile
+++ b/blas/Makefile
@@ -1,9 +1,9 @@
 CFLAGS=-g -Wall -Wextra -std=c11 -O3
 
-.PHONY: all
-all: main.out
-blas: main.c regulafarsi.S
+ .PHONY: all
+ all: blas
+ blas: blas.c saxpy.S
 
-.PHONY: clean
-clean:
-	rm -f main.out
+ .PHONY: clean
+ clean:
+ 	rm -f blas
